--- a/gainzTracker/src/index.html
+++ b/gainzTracker/src/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <app-root></app-root>
 </body>
 </html>
